<resources>
    <string name="app_name">Mahindra Finanace Mfact</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="getting_started_btn_text">Get started</string>
    <string name="qr_details_btn_text">QR Details</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs multiple permission to proceed.</string>
    <string name="grant">GRANT</string>
    <string name="cancel">CANCEL</string>
    <string name="registration_heading">Registration</string>
    <string name="sapcode">Sapcode</string>
    <string name="imei_heading_one">IMEI 1 :</string>
    <string name="imei_heading_two">IMEI 2 :</string>
    <string name="submit_btn_text">Submit</string>
    <string name="hello_msg">Hello,</string>
    <string name="click_for_audit_task_msg">Click here to get the assigned audit tasks</string>
    <string name="next_btn_text"><![CDATA[Next ->]]></string>
    <string name="app_under_maintenance_msg">Application under maintenance</string>
    <string name="exit_btn_text">Exit Application</string>
    <string name="branch_list_title">Assign Branch List</string>
    <string name="please_wait_branch_list_getting_msg">Getting branch list</string>
    <string name="retry_btn_text">Retry</string>
    <string name="no_net_msg">Please check your net connection.</string>
    <string name="audit_progress_title">Audit in Progress</string>
    <string name="audit_id">Audit ID</string>
    <string name="getting_audit_id_msg">Please wait getting your Audit ID</string>
    <string name="location">Location:</string>
    <string name="continue_btn_text">Continue</string>
    <string name="scan_qr_code_heading">Scan Code</string>
    <string name="conclude_btn_text">Conclude</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="gettting_details_msg">Getting details</string>
    <string name="wrong_qr_code_scanned_msg">Please scan correct QR code.</string>
    <string name="getting_location_msg">Getting Location...</string>
    <string name="press_back_again_msg">Press again to exit.</string>
    <string name="asset_list_title">Asset List</string>
    <string name="back_btn_txt">Back</string>
    <string name="audit_done_btn_text">Audit Done</string>
    <string name="please_wait_asset_list_getting_msg">Getting Asset list</string>
    <string name="confirm_title">Confirm</string>
    <string name="audit_done_confirm_msg">Do you really want to end this AUDIT ?</string>
    <string name="yes">Yes</string>
    <string name="please_wait_msg">Please wait...</string>
    <string name="server_error_msg">There is error while getting response from server</string>
    <string name="profile">Profile</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="scan">Scan</string>
    <string name="conclude">Conclude</string>
    <string name="please_enter_sapcode_to_continue">Please Enter SapCode To Continue</string>
    <string name="empcode">EmpCode</string>
    <string name="no_audit_tasks_found">NO AUDIT TASKS FOUND</string>
    <string name="exit_application">Exit Application</string>
    <string name="adt_id">Audit ID:</string>
    <string name="total">Total :</string>
    <string name="completed">Completed:</string>
    <string name="pending">Pending:</string>
    <string name="getting_asset_list">Getting Asset List</string>
    <string name="volume_up_to_flash_on">Volume up to flash on</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="customer_information">Information</string>
    <string name="gps_location">GPS Location</string>
    <string name="please_turn_on_your_location">Please Turn On Your Location</string>
    <string name="settings">SETTINGS</string>
    <string name="choose_a_condition">Choose a condition</string>
    <string name="working_condition">Working Condition</string>
    <string name="not_in_use">Not in use</string>
    <string name="scrap">Scrap</string>
    <string name="not_in_working_condition">Not in Working Condition</string>
    <string name="assetlist">AssetInfo</string>
    <string name="invalid_qr">Invalid QR</string>
    <string name="please_scan_qr_code_first">Please Scan QR Code first</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="successful">Successful</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="registration_successfull">REGISTRATION SUCCESSFULL</string>
    <string name="employee_is_inactive">Employee is Inactive</string>
    <string name="your_account_has_been_locked_kindly_resend_registration_request">Your Account Has Been locked, Kindly Resend Registration Request</string>
    <string name="resend_request">Resend Request</string>
    <string name="application_under_maintainence">Application Under Maintainence</string>
    <string name="account_has_been_locked_due_to_inactive_employee">Account has been locked due to inactive employee</string>
    <string name="imresponse_is_null">imresponse is null</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="onfailure">onFailure</string>
    <string name="OK">OK</string>
    <string name="logout">Logout</string>
    <string name="logoutmsg">Are You Sure You Want to Logout ?</string>
    <string name="no">NO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form">Manual Audit</string>
    <string name="asset_code">Asset Code</string>
    <string name="serial">Serial</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="tag">Tag</string>
    <string name="verification_remarks">Verification Remarks</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="sscat">SSCAT</string>
    <string name="asset_owner">Asset Owner</string>
    <string name="destination">Destination</string>
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="company">Company</string>
    <string name="department">Department</string>
    <string name="mail">Mail</string>
    <string name="contact">Contact</string>


</resources>