<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".activities.AuditDetailsScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:text="@string/audit_progress_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/audit_id"/>

        <TextView
            android:id="@+id/tvAuditId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/getting_audit_id_msg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/white"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:weightSum="1"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:animateLayoutChanges="true"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textAllCaps="false"
                android:animateLayoutChanges="true"
                android:visibility="visible"
                android:layout_centerInParent="true"
                android:text="@string/continue_btn_text"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"/>
            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:animateLayoutChanges="true"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:indeterminateTintMode="src_atop"/>
        </RelativeLayout>
    </LinearLayout>




</LinearLayout>
