<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1"
    tools:context="com.app.mahindrafinancemfact.activities.ProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="Transfer Form"/>


    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_code"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen20dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:background="@drawable/textview_resource_file"
                    android:entries="@array/dest">
                <Spinner
                    android:id="@+id/spinnerasset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen10dp"

                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen10dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/diabled"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:text="@string/details"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/diabled"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sscat"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen10dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sscat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/diabled"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_owner"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen10dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/diabled"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_17dp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:text="@string/status"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/stat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/diabled"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen10dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvtag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/diabled"
                    android:text="Transfer"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comments"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen10dp"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_resource_file"
                    android:textSize="@dimen/dimen15sp"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginRight="@dimen/dimen30dp"
                    android:padding="@dimen/dimen10dp"/>

                <TextView
                    android:id="@+id/dest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destination"
                    android:layout_marginLeft="@dimen/dimen30dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:textSize="@dimen/dimen15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen10dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen30dp"
    android:layout_marginRight="@dimen/dimen30dp"
    android:background="@drawable/textview_resource_file"
    >
                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen10dp"
                    />
</RelativeLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nxtbtn"
                    android:layout_width="@dimen/dimen200dp"
                    android:layout_height="@dimen/dimen50dp"
                    android:layout_marginTop="@dimen/dimen20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button"
                    android:text="@string/next_btn_text"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:visibility="visible" />

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/llinternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimennegative40dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/dimen200dp"
                android:layout_height="@dimen/dimen200dp"
                android:paddingLeft="@dimen/dimen10dp"
                android:paddingRight="@dimen/dimen10dp"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/wireless" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                android:textSize="@dimen/dimen25sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRetry"
                    android:layout_width="@dimen/dimen200dp"
                    android:layout_height="@dimen/dimen50dp"
                    android:layout_marginTop="@dimen/dimen20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button"
                    android:text="@string/retry_btn_text"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:visibility="visible" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/servererror"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimennegative40dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen200dp"
                android:paddingLeft="@dimen/dimen10dp"
                android:paddingRight="@dimen/dimen10dp"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/error" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/server_error_msg"
                android:textSize="@dimen/dimen25sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>