<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Registration">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/registration_heading"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="vertical">



                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSapCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sapcode"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/imei_heading_one"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvImeiOne"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="--"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llimeitwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/imei_heading_two"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvImeiTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="--"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:layout_centerInParent="true"
                            android:backgroundTint="@color/colorPrimary"
                            android:text="@string/submit_btn_text"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white" />

                        <ProgressBar
                            android:id="@+id/pbLoading"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:elevation="10dp"
                            android:indeterminate="true"
                            android:indeterminateTint="@android:color/white"
                            android:indeterminateTintMode="src_atop"
                            android:visibility="gone" />
                    </RelativeLayout>


                    <!--<TextView
                        android:id="@+id/tv_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_msg"
                        android:layout_centerVertical="true"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />-->


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>